src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Attended_induction_session__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended induction session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Availability_Note__c</fullName>
        <inlineHelpText>could be something like ‘away for month of November’</inlineHelpText>
        <label>Availability Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Availability_for_Filling_In__c</fullName>
        <label>Availability for Filling In</label>
        <picklist>
            <picklistValues>
                <fullName>Anytime, anywhere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fills in in own centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fills in in other centres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not available to fill in</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_status__c</fullName>
        <inlineHelpText>Used to avoid deleting contacts - mass email should only go to active contacts</inlineHelpText>
        <label>Contact status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>County_Council__c</fullName>
        <label>County Council</label>
        <picklist>
            <controllingField>Type_of_Politician__c</controllingField>
            <picklistValues>
                <fullName>DunLaoghaire Rathdown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fingal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin City</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Admission_Final_Qualification__c</fullName>
        <inlineHelpText>Date (or Expected Date) of Admission / Final Qualification in Ireland
(Called to the Bar of Ireland or admitted to the Roll of Solicitors)</inlineHelpText>
        <label>Date of Admission / Final Qualification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_you_check_this_email_regularly__c</fullName>
        <label>Do you check this email regularly</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electronic_version_of_FLAC_News__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wishes to receive a copy of FLAC news by email</description>
        <label>Electronic version of FLAC News</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employment_law_specialist_clinic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employment law specialist clinic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <inlineHelpText>DO NOT REMOVE or EDIT this field
Only for Data IMPORT/UPDATE purposes</inlineHelpText>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAC_Role__c</fullName>
        <inlineHelpText>Role of this contact within FLAC</inlineHelpText>
        <label>FLAC Role</label>
        <picklist>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Council Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former Intern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former Council Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Founder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FLAC_Society__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FLAC Society</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_law_specialist_clinic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family law specialist clinic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Volunteer_Date__c</fullName>
        <inlineHelpText>The first Volunteer Hours Start Date</inlineHelpText>
        <label>First Volunteer Date</label>
        <summarizedField>Volunteer_Hours__c.Start_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Volunteer_Hours__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Volunteer_Hours__c.Contact__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Friend_of_FLAC_letter_2013__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box should be checked if the person has been identified as someone to receive a letter in 2013 inviting them to become a &apos;friend of FLAC&apos;</description>
        <label>Friend of FLAC letter 2013</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Heard_about_volunteering__c</fullName>
        <label>Heard about volunteering</label>
        <picklist>
            <picklistValues>
                <fullName>Law Society advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous involvement with FLAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteering Ireland website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College / university</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Through a colleague / friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other organisation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Heard_about_volunteering_other__c</fullName>
        <label>Heard about volunteering other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Outside_Dublin_please_specify__c</fullName>
        <label>If Outside Dublin, please specify</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify__c</fullName>
        <inlineHelpText>Specify the &apos;other&apos; type of volunteering</inlineHelpText>
        <label>If other, please specify</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immigration_law_specialist_clinic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Immigration law specialist clinic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_NGO_staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is NGO staff (PILA only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_general_public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is general public (PILA only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Joined_PILA_Register__c</fullName>
        <inlineHelpText>Select the date this contact signed up to join the PILA register</inlineHelpText>
        <label>Joined PILA Register</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_SMS_TXT__c</fullName>
        <label>Last SMS TXT</label>
        <length>158</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Volunteer_Date__c</fullName>
        <inlineHelpText>The latest Volunteer Hours End Date</inlineHelpText>
        <label>Last Volunteer Date</label>
        <summarizedField>Volunteer_Hours__c.End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Volunteer_Hours__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Volunteer_Hours__c.Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lead_Home_Area_Town__c</fullName>
        <description>Temp used when Contact is created from a lead to populate the home address field</description>
        <label>Lead Home Area Town</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Home_City_County__c</fullName>
        <description>Temp used when Contact is created from a lead to populate the home address field</description>
        <label>Lead Home City County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Home_Phone__c</fullName>
        <description>Temp used when Contact is created from a lead to populate the home phone field</description>
        <label>Lead Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Lead_Home_Street__c</fullName>
        <description>Temp used when Contact is created from a lead to populate the home address field</description>
        <label>Lead Home Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Expertise__c</fullName>
        <label>Legal Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>Credit &amp; Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing/Tenancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immigration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Injuries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Welfare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Succession/Probate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Irish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighbour Disputes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Interest in Land</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Legal_Qualifications__c</fullName>
        <label>Legal Qualifications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_exp_Property_Interest_in_Land__c</fullName>
        <label>Level of exp Property/Interest in Land</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_exp_of_Criminal_Law__c</fullName>
        <label>Level of exp of Criminal Law</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_exp_of_Immigration_Refugee__c</fullName>
        <label>Level of exp of Immigration/Refugee</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_exp_of_Neighbour_Disputes__c</fullName>
        <label>Level of exp of Neighbour Disputes</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_exp_of_Succession_Probate__c</fullName>
        <label>Level of exp of Succession/Probate</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_experience_of_Consumer_Law__c</fullName>
        <label>Level of experience of Consumer Law</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_experience_of_Credit_and_Debt__c</fullName>
        <label>Level of experience of Credit and Debt</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_experience_of_Employment_Law__c</fullName>
        <label>Level of experience of Employment Law</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_experience_of_Family_Law__c</fullName>
        <label>Level of experience of Family Law</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_experience_of_Housing_Tenancy__c</fullName>
        <label>Level of experience of Housing / Tenancy</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_experience_of_Personal_Injuries__c</fullName>
        <label>Level of experience of Personal Injuries</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_experience_of_Social_Welfare__c</fullName>
        <label>Level of experience of Social Welfare</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_National__c</fullName>
        <label>Local/National</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MEP_Constituency__c</fullName>
        <label>MEP Constituency</label>
        <picklist>
            <controllingField>Type_of_Politician__c</controllingField>
            <picklistValues>
                <fullName>Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_Label__c</fullName>
        <formula>TEXT(Salutation) &amp; &quot; &quot; &amp; FirstName &amp;&quot; &quot;&amp; LastName &amp;br() 
&amp; if (not( ISPICKVAL(npe01__Primary_Address_Type__c, &quot;Home&quot;))
,
  IF ( Len( Title )=0,( Title ),(( Title ) &amp;br())) 
  &amp; Account.Name &amp;br()
  &amp; IF ( Len( Department )=0,( Department ),(( Department ) &amp;br()))
,
&quot;&quot;
)
  &amp; 
if ( not(ISPICKVAL(npe01__Primary_Address_Type__c, &quot;Home&quot;)),
IF ( Len( Account.BillingStreet)=0,(  Account.BillingStreet),(( Account.BillingStreet) &amp;br())) 
  &amp; IF ( Len(  Account.BillingCity )=0,(  Account.BillingCity ),(( Account.BillingCity) &amp;br())) 
  &amp; Account.BillingState &amp;&quot; &quot;
  &amp; Account.BillingPostalCode&amp;br() 
  &amp; if(Account.BillingCountry=&quot;Ireland&quot;,&quot;&quot;,IF ( Len( Account.BillingCountry )=0,(  Account.BillingCountry ),((  Account.BillingCountry ) &amp;br()))),
IF ( Len( MailingStreet)=0,( MailingStreet),(( MailingStreet) &amp;br())) 
  &amp; IF ( Len( MailingCity )=0,( MailingCity ),((MailingCity) &amp;br())) 
  &amp; MailingState &amp;&quot; &quot;
  &amp; MailingPostalCode&amp;br() 
  &amp;  if(MailingCountry=&quot;Ireland&quot;,&quot;&quot;,IF ( Len( MailingCountry )=0,( MailingCountry ),(( MailingCountry ) &amp;br()))))</formula>
        <inlineHelpText>Tick this box if the contact should be added to the organisation wide mailing list for invitations to the Dave Ellis lecture etc</inlineHelpText>
        <label>Mailing Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_FLAC_Mailing_List__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this box to add contact to the main FLAC mailing list e.g. for Dave Ellis annual lecture invitation</inlineHelpText>
        <label>Main FLAC Mailing List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_job_in_FLAC_Centre__c</fullName>
        <label>Main job in FLAC Centre</label>
        <picklist>
            <picklistValues>
                <fullName>Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receptionist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_of_Committee__c</fullName>
        <label>Member of Committee</label>
        <picklist>
            <picklistValues>
                <fullName>Comms Nat Resources &amp; Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education &amp; Social Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enviro Transport Culture &amp; Gaeltacht</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>European Union Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Public Expend &amp; Reform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Affairs &amp; Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imp of Good Friday Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Service Oversight &amp; Petitions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Admin Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Justice Defence &amp; Equality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Members Interests (Dail)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Members Interests (Seanad)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procedures &amp; Privileges (Dail)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procedures &amp; Privileges (Seanad)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Consultation Cttee (Seanad)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selection (Seanad)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Member_of_the_legal_profession__c</fullName>
        <label>Member of the legal profession</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Apprentice Solicitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barrister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Devilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate but not fully qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overseas Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-house counsel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal academic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified in Ireland but not currently practicing law</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minister__c</fullName>
        <label>Minister</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Minister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minister of State</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Multiple_copies_FLAC_news__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Requires more than one copy of FLAC news</description>
        <label>Multiple copies FLAC news</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_PILA_pro_bono_register__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This register is only for lawyers</inlineHelpText>
        <label>On PILA pro bono register</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Only_to_be_contacted_by_owner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The person identified as the &quot;Owner&quot; should be the only one to contact this person. 
They are not to be included in mass mailings</inlineHelpText>
        <label>Only to be contacted by owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_Type__c</fullName>
        <formula>text(Account.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_PILA_Areas_of_Law_or_Expertise__c</fullName>
        <inlineHelpText>Any other areas of law or relevant expertise that aren&apos;t in the menu above</inlineHelpText>
        <label>Other PILA Areas of Law or Expertise</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_area_of_legal_expertise__c</fullName>
        <label>Other area of legal expertise</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_skills__c</fullName>
        <inlineHelpText>e.g. Irish speaker</inlineHelpText>
        <label>Other skills</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_topics_of_interest__c</fullName>
        <label>Other topics of interest</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_work_for_FLAC__c</fullName>
        <inlineHelpText>e.g. did an interview in  a local paper, did a talk for FLAC somewhere</inlineHelpText>
        <label>Other work for FLAC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PILA_Areas_of__c</fullName>
        <inlineHelpText>Select the areas of legal expertise of the Contact as indicated on the PILA register</inlineHelpText>
        <label>PILA Areas of Law</label>
        <picklist>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arbitration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asylum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chancery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil procedure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constitutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conveyancing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate governance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defamation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drafting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>European Convention on Human Rights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evidence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extradition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PILA_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Make sure only the PILA staff can see this checkbox</description>
        <label>PILA Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PILA_biography_notes__c</fullName>
        <label>PILA biography notes</label>
        <type>TextArea</type>
    </fields>
</CustomObject>